--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>rainbow</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
-    <meta http-equiv="x-ua-compatible" content="IE=edge" >
+    <link rel="icon" href="/favicon.ico" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+    />
+    <meta http-equiv="x-ua-compatible" content="IE=edge" />
   </head>
   <body>
     <div id="app"></div>
